Authetication improved with message callback and better documentation added
